--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8"/>
     <title>Expense Tracker</title>
-
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link href="app-content/app.css" rel="stylesheet"/>
@@ -11,13 +10,8 @@
 <body class="container">
 <!-- header -->
 <header>
-    <ul class="nav nav-tabs">
-        <li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
-        <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
-        <li><a href="/login" target="_self">Logout</a></li>
-    </ul>
     <div class="flash-message" ng-if="flash">
-        <div class="{{'alert alert-' + flash.type}}" ng-bind="flash.message"></div>
+        <div class="{{'alert alert -' + flash.type}}" ng-bind="flash.message"></div>
     </div>
 </header>
 
@@ -32,12 +26,15 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
 
 <!-- application scripts -->
 <script src="app.js"></script>
 <script src="app-services/user.service.js"></script>
+<script src="app-services/expense.service.js"></script>
 <script src="app-services/flash.service.js"></script>
-<script src="home/index.controller.js"></script>
+<script src="user-home/index.controller.js"></script>
 <script src="account/index.controller.js"></script>
 </body>
 </html>
