--- a/app/index.html
+++ b/app/index.html
@@ -31,5 +31,7 @@
 <script src="app-services/flash.service.js"></script>
 <script src="user-home/index.controller.js"></script>
 <script src="account/index.controller.js"></script>
+<script src="directives/show-expenses/show-expenses.controller.js"></script>
+<script src="directives/show-expenses/show-expenses.directive.js"></script>
 </body>
 </html>
