--- a/app/user-home/index.html
+++ b/app/user-home/index.html
@@ -1,2 +1,19 @@
-<show-expenses ng-if="vm.showExpensesTab"></show-expenses>
-<show-users></show-users>
+<div class="container">
+    <div class="page-header page-heading">
+        <h1 class="text-center">Expense Management</h1>
+        <div class="clearfix"></div>
+    </div>
+    <p class="lead text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore
+        et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+    <div class="row">
+        <button class="btn btn-primary" ng-click="vm.toggleExpensesTab()">{{vm.expenseBtnLiteral}}</button>
+        <button class="btn btn-primary" ng-click="vm.toggleUsersTab()">{{vm.userBtnLiteral}}</button>
+    </div>
+    <show-expenses ng-if="vm.showExpensesTab"></show-expenses>
+    <show-users ng-if="vm.showUsersTab"></show-users>
+</div>
