print expense functionality

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <title>Expense Tracker</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://printjs-4de6.kxcdn.com/print.min.css" rel="stylesheet"/>
+    <link href="app-content/datepicker.css" rel="stylesheet" type="text/css" />
     <link href="app-content/app.css" rel="stylesheet"/>
 </head>
 <body ng-cloak class="container">
@@ -23,6 +25,8 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
+<script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
+<script src="app-content/datepicker.js"></script>
 
 <!-- application scripts -->
 <script src="app.js"></script>
