show user and expense based on role

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
     <title>Expense Tracker</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://printjs-4de6.kxcdn.com/print.min.css" rel="stylesheet"/>
-    <link href="app-content/datepicker.css" rel="stylesheet" type="text/css" />
-    <link href="app-content/app.css" rel="stylesheet"/>
+    <link href="content/datepicker.css" rel="stylesheet" type="text/css"/>
+    <link href="content/app.css" rel="stylesheet"/>
 </head>
 <body ng-cloak class="container">
 <!-- header -->
@@ -26,13 +26,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
 <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
-<script src="app-content/datepicker.js"></script>
+<script src="content/datepicker.js"></script>
 
 <!-- application scripts -->
 <script src="app.js"></script>
-<script src="app-services/user.service.js"></script>
-<script src="app-services/expense.service.js"></script>
-<script src="app-services/flash.service.js"></script>
+<script src="services/user.service.js"></script>
+<script src="services/expense.service.js"></script>
+<script src="services/flash.service.js"></script>
 <script src="user-home/index.controller.js"></script>
 <script src="components/show-expenses/show-expenses.controller.js"></script>
 <script src="components/show-expenses/show-expenses.directive.js"></script>
